[tool.poetry]
name = "sleet"
version = "0.1.0"
description = "CLI helper tools for interacting with the Snowflake Data Warehouse"
license = "GPL-3.0"
authors = ["Seth Woodworth <seth@sethish.com>"]
homepage = "https://github.com/sethwoodworth/sleet"

[tool.poetry.dependencies]
python = "^3.6"
blessings = "^1.7"
click = "^7.0"
snowflake-connector-python = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
ipython = "^7.8"
ipdb = "^0.12.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
